--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <!-- Start Tooltip -->
             <!-- Когда добавляешь сюда описание, дорогой друг, добавь новодобавленный id спектакля и в скрипт в main.js и main.css -->
             <div id="spectacle" class="span9">
-                <div id="movax">«Беларусь – это будущее Беларуси. Будто нас еще нет, но мы не можем не родиться». (О. Шпарага). «Мова Х» – это спектакль-ритуал, посвященный родному языку, в котором приглашаются поучаствовать зрители. Родиться вместе с языком, помочь ему повзрослеть, развиться, встретиться с препятствиями и переродиться вновь...</div>
+                <div id="movax">«Беларусь – это будущее Беларуси. Будто нас еще нет, но мы не можем не родиться». (О. Шпарага). «Мова Х» – это спектакль-ритуал, посвященный родному языку, в котором приглашаются поучаствовать зрители. Родиться вместе с языком, помочь ему повзрослеть, развиться, встретиться с препятствиями и переродиться вновь...</div>                
                 <div id="mauser">30-40 минутный интерактивный спектакль, в котором зритель выступает равноправным участником. Драматург, чьи строки звучат в спектакле, задался темой революции, поведения индивида и толпы… Но вы можете обнаружить в этом всем нечто свое.</div>
                 <div id="garry">30-минутный спектакль полный волшебства с элементами интерактива и играми. Основан на личных историях-воспоминаниях актеров. О книгах про Гарри Поттера, каше и ностальгии по детству. Обязательный спутник атмосферы постановки – песня группы «Кассиопея» – «Солнце»</div> 
                 <div id="somnambulist">Перформанс, сопровождавший концерт-презентацию дебютного альбома группы MartinS., в котором каждая песня музыкантов и была определенным сном, со своей краской, сюжетом, финалом.</div> 
@@ -1284,6 +1284,29 @@
             </div>
         </div>
         <!-- End Profile -->
+
+        <!-- Start Profile -->
+        <div class="span4 profile">
+            <div class="image-wrap">
+<!--                 <div class="hover-wrap">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-text-thumb">Lead Designer</span>
+                </div> -->
+                <img src="include/img/profile/adashkevich.jpg" alt="Полина Адашкевич">
+            </div>
+            <h3 class="profile-name">Полина Адашкевич</h3>
+            <p class="profile-description"></p>
+                
+            <div class="social">
+                <ul class="social-icons">
+<!--                     <li><a href="#"><i class="font-icon-social-twitter"></i></a></li>
+                    <li><a href="#"><i class="font-icon-social-linkedin"></i></a></li>
+                    <li><a href="#"><i class="font-icon-social-google-plus"></i></a></li>
+                    <li><a href="#"><i class="font-icon-social-vimeo"></i></a></li> -->
+                </ul>
+            </div>
+        </div>
+        <!-- End Profile -->        
         
     </div>
     <!-- End People -->
@@ -1477,7 +1500,7 @@
                 <ul>
                     <li><a href="mailto:golovanoga.theatre@gmail.com">golovanoga.theatre@gmail.com</a></li>
                     <li>
-                        (37544) 748-48-25 Алексей 
+                        +375 44 748-48-25 Алексей 
                     </li>
  <!--                    <li>
                         Brushed Studio
