Попытка перевода на хттпс

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <link href="include/css/supersized.shutter.css" rel="stylesheet">
 
 <!-- Google Font -->
-<link href='http://fonts.googleapis.com/css?family=Exo+2:700,400,900,900italic,200italic,200,700italic,300italic,600italic,600,300,400italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Exo+2:700,400,900,900italic,200italic,200,700italic,300italic,600italic,600,300,400italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 
 <!-- Fav Icon -->
 <link rel="shortcut icon" href="include\img\logo\favicon.ico">
@@ -1549,7 +1549,7 @@
 
 
 <!-- Js -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> <!-- jQuery Core -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> <!-- jQuery Core -->
 <script src="include/js/bootstrap.min.js"></script> <!-- Bootstrap -->
 <script src="include/js/supersized.3.2.7.min.js"></script> <!-- Slider -->
 <script src="include/js/waypoints.js"></script> <!-- WayPoints -->
